# tree-sitter-atob

./: .editorconfig  .gitignore  .projections.json  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  default.nix  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  readme.md  setup.py  shell.nix  tree-sitter.json
bindings/c/: tree-sitter-atob.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_atob/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAtob/: atob.h
bindings/swift/TreeSitterAtobTests/: TreeSitterAtobTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: tests.txt
