[package]
name = "tree-sitter-atob"
description = "A string-rewriting esolang, from the game of the same name"
version = "0.0.1"
authors = ["f <huivioemp1bs@posteo.com>"]
license = "WTFPL"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "atob"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/futarimiti/tree-sitter-atob"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
